fix the overflow issues in home

--- a/style.css
+++ b/style.css
@@ -63,7 +63,6 @@ nav {
     width: 100%;
 }
 
-/* Active state without transition */
 .nav-links ul li a.active::after {
     width: 100%;
     transition: none;
@@ -419,10 +418,11 @@ footer {
     }
 
     /* product highlight  */
-    .product-highlight {
+     .product-highlight {
         padding: 30px 5px;
-        width: 100%;
+        width: 90%;
     }
+    
 
     .product-highlight h1 {
         font-size: 2.5rem;
@@ -444,7 +444,7 @@ footer {
         margin-top: 1rem;
         width: 100%;
     }
-
+ 
     .product-description p {
         font-size: 1.1rem;
 
@@ -453,17 +453,16 @@ footer {
     .price {
         margin-top: 15px;
     }
-
     .product-image img {
         width: 100%;
-    }
+    } 
 
 
 
     /* footer  */
     footer {
         margin-top: 2rem;
-        padding: 30px 3px;
+        padding: 25px 3px;
     }
 
     .left h3 {
